# starfile

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  package.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-deploy-docs.yml  ci.yml  docs.yml  test_and_deploy.yml
docs/: data_model.md  index.md
docs/examples/: merging.md  multi_block.md  single_block.md
examples/merging/: index.html
examples/multi_block/: index.html
examples/single_block/: index.html
search/: search_index.json
src/starfile/: __init__.py  __main__.py  functions.py  parser.py  py.typed  typing.py  utils.py  writer.py
starfile/: __init__.py  __main__.py  core.py  functions.py  parser.py  starfile.py  typing.py  utils.py  version.py  writer.py
test/: test_functions.py  test_starfile.py
test/data/: multi_line_c_engine.star  optics_group_inter1965.star  postprocess.star
test/data/relion_tutorial/: run_it025_optimiser_3D.star  run_it025_sampling_3D.star
tests/: constants.py  test_functional_interface.py  test_functions.py  test_parsing.py  test_read_write_round_trip.py  test_starfile.py  test_writing.py  utils.py
tests/data/: basic_block.star~  basic_double_quote.star  basic_single_quote.star  default_pipeline.star  empty_loop.star  from_df.star~  from_list.star~  loop_block.star~  loop_double_quote.star  loop_single_quote.star  one_loop.star  rln3.1_data_style.star  single_line_end_of_multiblock.star  single_line_middle_of_multiblock.star  test_overwrite_backup.star~  test_string_double_quote.star  test_string_single_quote.star  test_write.star~  two_basic_blocks.star  two_single_line_loop_blocks.star
tests/data/relion_tutorial/: run_it025_optimiser_2D.star  run_it025_sampling_2D.star
