[metadata]
name = starfile
version = attr: starfile.__version__
url = https://github.com/alisterburt/starfile
license = BSD 3-Clause
license_file = LICENSE
description = STAR file reading and writing in python.
long_description = file: README.md
long_description_content_type = text/markdown
author = Alister Burt
author_email = alisterburt@gmail.com
classifiers =
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
install_requires =
    pandas


[options.extras_require]
cli =
    click
    IPython
    matplotlib
    seaborn


[options.entry_points]
console_scripts =
    starfile = starfile.__main__:cli


[options.package_data]
* = *.txt, *.md
